--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,21 +1,22 @@
 \vspace{-0.3cm}\section{INTRODUCTION}
-With the fast development of Internet, image search and recommendation play an important role in delivering information in our daily life. In these applications, measuring the distance (or similarity) of pair-wise images is a fundamental and important issue. \emph{If an effective image distance metric is obtained, we can easily employ existing technologies to achieve satisfactory performance in image search \cite{visualrank} and recommendation \cite{cbf}.}
+With the fast development of Internet, images play an important role in delivering information in our daily life. Thus, understanding images become an increasing demand. In image processing and understanding applications, such as image search, recommendation and classification, measuring the distance (or similarity) of pair-wise images is a fundamental and important issue. \emph{If an effective image distance metric is obtained, we can easily employ existing technologies to achieve satisfactory performance in such applications\cite{visualrank,cbf}.}
 
-However, to date, existing image distance metrics do not perform well to achieve this goal, due to the fact that they usually focus on measuring similarity of visual features but are not mature to capture human cognition, which is one of the most important factors in image search and recommendation. Here human cognition includes many aspects, such as semantics, attributes, user intention, image emotion, etc. Although the problem of capturing human cognition has received increasing attention in recent years, how to identify users' cognition is still a great challenge because we can hardly obtain the knowledge.
+However, to date, existing image distance metrics do not perform well to achieve this goal, due to the fact that they usually focus on measuring similarity of visual features but are not mature to capture user intention, especially in human related applications, such as image search and recommendation. Here user intention includes many aspects, such as semantics, attributes, emotion, layout, etc. Although the problem of capturing user intention has received increasing attention, how to identify and understand it is still a great challenge because there is a huge gap between level visual contents and high level user intention, which is called intention gap.
 
- With the development of social network, a huge amount of users share their beautiful pictures and view others' in the social media platforms, such as Flickr and Twitter. Within these platforms, we can obtain not only vast amounts of images but also a series of collective social and behavioral information, such as annotated tags, favorite images and interest groups of users. In social psychology, it has been proved that human cognition and user behavior influence each other \cite{cognitive}. Therefore, social behavioral information in social media platform can be regarded as the reflection of their cognition to images. Given user behavior information in the social media platforms, we can use to better evaluate image distance. However, this idea faces the following challenges:
+ With the development of social network, a huge amount of users share their beautiful pictures and view others' in the social media platforms, such as Flickr and Twitter. Within these platforms, we can obtain not only vast amounts of images but also a series of collective social and behavioral information, such as annotated tags, favorite images and interest groups of users. In social psychology, it has been proved that human cognition and user behavior influence each other \cite{cognitive}. Therefore, social behavioral information in social media platform can be regarded as the reflection of their intention when viewing images. Given user behavior information in the social media platforms, we can use to better evaluate image distance. In recent years, there are some works that focus on using social information to better evaluate image similarity and achieves some improvements. However, they are limited due to the following challenges:
 
 
  %Although the technologies up to date can hardly estimate the user cognition behind his behavior, we can easily evaluate the similarity of user behaviors of two images. For a pair of images, if users have similar behaviors (such as favoring, sharing and tagging), their cognition to the images would also be similar. In this paper, we refer to the similarity of users' social behaviors as social similarity.
 
 
 
-(1) \textbf{The lack of social information in Web image.} Although behavioral information does help to estimate user cognition, most of the Web images do not have user behavior information due to the fact that they are not produced by social media platforms. If the image distance relies on  social behavioral data, our method will be extremely circumscribed in social images. Therefore, how to make our distance metric universal in common Web images is a great challenge in our problem.
+(1) \textbf{The lack of social information in general Web image.} Although behavioral information does help to estimate user cognition, most of the Web images do not have user behavior information due to the fact that they are not produced by social media platforms. If the image distance relies on  social behavioral data, our method will be extremely circumscribed in social images. Therefore, how to make our distance metric universal in common Web images is a great challenge in our problem.
 
-(2) \textbf{The unreliability of social media data.} In social network, collective social and behavioral information is usually uncertain and unreliable. If the amount of user behavior information is not enough, the social similarity may have contingency. For example, although two images are both favored by a user, they may be still dissimilar because the user might have more than one interest. Thus, we also need to consider the reliability of social similarity.
+(2) \textbf{The unreliability and sparsity of social media data.} In social network, collective social and behavioral information is usually sparse and unreliable. If the amount of user behavior information is not enough, the social similarity may have contingency. Not all of image pairs's social similarity can be evaluated well. Thus, we also need to consider the reliability of social similarity and balance the social similarity and visual similarity in this case.
 
-(3) \textbf{The sparsity of user behavior.} In traditional image distance learning task, the knowledge of similarity graph is very dense: in most cases, the similarity of any two images is
-fixed. However, in social network, most of pair-wise images are not related socially. Thus, we cannot determine whether these two images are socially similar or not. In this case, the visual similarity should be maintained.
+(3) \textbf{The sparsity of user behavior.} 
+
+
 %(3) The Heterogeneity of social data. Different with traditional homogeneous data structure, the data in social media is heterogeneous  and hybrid. For example, a user may publish and favor a lot of images and an image may be shared to a series of interest groups. Therefore, to make our method extensible, we should formulate these multi-modal information in a unified structure.
 
 \begin{figure*}
